# modpack-installer

./: Cargo.toml  readme.md
src/: main.rs
src/api/: mod.rs
src/api/modpack/: data.rs  download_stream.rs  info.rs  mod.rs  search.rs
src/api/overrides/: manifest.rs  mod.rs
src/app/: mc_data_dir_select.rs  mod.rs  pack_select.rs  ver_select.rs
src/app/pack_install/: mod.rs  package.rs  web.rs
src/app/tasks/: install_pack.rs  mod.rs
src/launcher/: mod.rs  profile.rs
src/util/: file.rs  hash.rs  mod.rs
