[package]
name = "modpack-installer"
description = "Hyper fast modpack installer"
version = "0.1.0"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json"] }

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.14"
bytes = "1.0.1"

dialoguer = "0.8.0"
indicatif = "0.16.0"
console = "0.14.1"

semver = "0.11.0"

directories = "3.0.2"

zip = "0.5"

sha-1 = "0.9.5"
hex = "0.4.3"

chrono = "0.4"
base64 = "0.13.0"

tempfile = "3"

humansize = "1.1.0"
